Remove pre overflow fix since official version 1.3 fixed it

--- a/ttk.css
+++ b/ttk.css
@@ -96,10 +96,6 @@ code {
 	word-wrap: break-word;
 }
 
-pre {
-	overflow: auto;
-}
-
 /* Try to prevent layout breakers */
 .comment-body {
 	word-wrap: break-word;
